--- a/mobile/package.json
+++ b/mobile/package.json
@@ -38,9 +38,9 @@
     "reset": "yarn clean:expo && yarn clean:node && yarn prebuild:clean"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^5.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.14",
@@ -50,39 +50,44 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
-    "expo": "~53.0.10",
-    "expo-haptics": "~14.1.4",
-    "expo-linear-gradient": "^14.1.5",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.0",
+    "expo-haptics": "~15.0.7",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-localization": "~17.0.7",
+    "expo-status-bar": "~3.0.8",
+    "i18next": "^25.5.2",
     "lucide-react": "^0.513.0",
     "lucide-react-native": "^0.513.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.57.0",
-    "react-native": "0.79.3",
+    "react-i18next": "^15.7.3",
+    "react-native": "0.81.4",
     "react-native-animatable": "^1.4.0",
     "react-native-config": "^1.5.5",
     "react-native-device-info": "^14.0.4",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keychain": "^10.0.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.11.1",
     "react-native-super-grid": "^6.0.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1",
     "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-private-methods": "^7.27.1",
-    "@types/react": "^19.1.6",
+    "@types/react": "~19.1.10",
     "@types/react-dom": "^19",
-    "@types/react-native": "^0.73.0",
     "@types/react-native-web": "^0",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
@@ -92,7 +97,7 @@
     "eslint-plugin-prettier": "^5.4.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true,
   "packageManager": "yarn@4.9.2"
