--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "baseUrl": "./src",
@@ -15,10 +15,8 @@
       "@api/*": ["api/*"],
       "@store/*": ["store/*"],
       "@hooks/*": ["hooks/*"]
-    },
-    "jsx": "react",
-    "allowSyntheticDefaultImports": true
+    }
   },
-  "include": ["src/**/*", "App.tsx", "index.js"],
+  "include": ["src/**/*", "App.tsx", "index.ts"],
   "exclude": ["node_modules", "android", "ios"]
 }
