--- a/mobile/package.json
+++ b/mobile/package.json
@@ -48,12 +48,15 @@
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "expo": "^54.0.0",
     "expo-clipboard": "^8.0.7",
     "expo-haptics": "~15.0.7",
+    "expo-image-manipulator": "^14.0.7",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
     "expo-status-bar": "~3.0.8",
